Agregando pagina Horarios y algunos estilos los a esa pestaña

--- a/j_especialidades.html
+++ b/j_especialidades.html
@@ -72,16 +72,19 @@
     </header>
     <main>
         <section>
+            <div class="subtitulos2">
+                <h2>Busqueda por especialidad</h2>
+            </div>
             <div class="listaDoc">
                 <div class="list-group">
-                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">Clínica Médica</a>
-                    <a href="#" class="list-group-item list-group-item-action">Cardiología</a>
-                    <a href="#" class="list-group-item list-group-item-action">Cirugía</a>
-                    <a href="#" class="list-group-item list-group-item-action">Ginecología</a>
-                    <a href="#" class="list-group-item list-group-item-action">Kinesiología</a>
-                    <a href="#" class="list-group-item list-group-item-action">Odontología</a>
-                    <a href="#" class="list-group-item list-group-item-action">Pediatría</a>
-                    <a href="#" class="list-group-item list-group-item-action">Psicología</a>
+                    <a href="#clinicaMedica" class="list-group-item list-group-item-action" aria-current="true">Clínica Médica</a>
+                    <a href="#cardiologia" class="list-group-item list-group-item-action">Cardiología</a>
+                    <a href="#cirugia" class="list-group-item list-group-item-action">Cirugía</a>
+                    <a href="#ginecologia" class="list-group-item list-group-item-action">Ginecología</a>
+                    <a href="#kinesiologia" class="list-group-item list-group-item-action">Kinesiología</a>
+                    <a href="#odontologia" class="list-group-item list-group-item-action">Odontología</a>
+                    <a href="#pediatria" class="list-group-item list-group-item-action">Pediatría</a>
+                    <a href="#psicologia" class="list-group-item list-group-item-action">Psicología</a>
                 </div>
                 <div class="imgRedSocial">
                     <img src="img/doctor.png" alt="">
@@ -89,34 +92,289 @@
             </div>
 
             <div>
-                <div>
+                <div class="subtitulos2" id="clinicaMedica">
+                    <h3>Clínica Médica</h3>
+                </div>
+                <div class="tablaDr">
                     <table class="table table-dark table-striped">
                         <thead>
                           <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Apellido</th>
-                            <th scope="col">Contacto</th>
+                              <th scope="col">Nombre</th>
+                              <th scope="col">Apellido</th>
+                              <th scope="col">Contacto</th>
+                              <th scope="col">Teléfono</th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr>
-                            <th scope="row">1</th>
-                            <td>Marty</td>
-                            <td>McFly</td>
-                            <td>MartyMcFly@jmr.com.ar</td>
+                              <td>Marty</td>
+                              <td>McFly</td>
+                              <td>MartyMcFly@jmr.com.ar</td>
+                              <td>223-512-3456</td>
                           </tr>
                           <tr>
-                            <th scope="row">2</th>
-                            <td>Emmett</td>
-                            <td>Brown</td>
-                            <td>EmmettBrown@jmr.com.ar</td>
+                              <td>Emmett</td>
+                              <td>Brown</td>
+                              <td>EmmettBrown@jmr.com.ar</td>
+                              <td>223-512-9988</td>
                           </tr>
                           <tr>
-                            <th scope="row">3</th>
-                            <td>Jennifer</td>
-                            <td>Parker</td>
-                            <td>JennParker@jmr.com.ar</td>
+                              <td>Jennifer</td>
+                              <td>Parker</td>
+                              <td>JennParker@jmr.com.ar</td>
+                              <td>223-512-5544</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                </div>
+
+                <div class="subtitulos2" id="cardiologia">
+                    <h3>Cardiología</h3>
+                </div>
+                <div class="tablaDr">
+                    <table class="table table-dark table-striped">
+                        <thead>
+                          <tr>
+                              <th scope="col">Nombre</th>
+                              <th scope="col">Apellido</th>
+                              <th scope="col">Contacto</th>
+                              <th scope="col">Teléfono</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                              <td>Marty</td>
+                              <td>McFly</td>
+                              <td>MartyMcFly@jmr.com.ar</td>
+                              <td>223-512-3456</td>
+                          </tr>
+                          <tr>
+                              <td>Emmett</td>
+                              <td>Brown</td>
+                              <td>EmmettBrown@jmr.com.ar</td>
+                              <td>223-512-9988</td>
+                          </tr>
+                          <tr>
+                              <td>Jennifer</td>
+                              <td>Parker</td>
+                              <td>JennParker@jmr.com.ar</td>
+                              <td>223-512-5544</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                </div>
+                
+                <div class="subtitulos2" id="cirugia">
+                    <h3>Cirugía general</h3>
+                </div>
+                <div class="tablaDr">
+                    <table class="table table-dark table-striped">
+                        <thead>
+                          <tr>
+                              <th scope="col">Nombre</th>
+                              <th scope="col">Apellido</th>
+                              <th scope="col">Contacto</th>
+                              <th scope="col">Teléfono</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                              <td>Marty</td>
+                              <td>McFly</td>
+                              <td>MartyMcFly@jmr.com.ar</td>
+                              <td>223-512-3456</td>
+                          </tr>
+                          <tr>
+                              <td>Emmett</td>
+                              <td>Brown</td>
+                              <td>EmmettBrown@jmr.com.ar</td>
+                              <td>223-512-9988</td>
+                          </tr>
+                          <tr>
+                              <td>Jennifer</td>
+                              <td>Parker</td>
+                              <td>JennParker@jmr.com.ar</td>
+                              <td>223-512-5544</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                </div>
+
+                <div class="subtitulos2" id="ginecologia">
+                    <h3>Ginecología</h3>
+                </div>
+                <div class="tablaDr">
+                    <table class="table table-dark table-striped">
+                        <thead>
+                          <tr>
+                              <th scope="col">Nombre</th>
+                              <th scope="col">Apellido</th>
+                              <th scope="col">Contacto</th>
+                              <th scope="col">Teléfono</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                              <td>Marty</td>
+                              <td>McFly</td>
+                              <td>MartyMcFly@jmr.com.ar</td>
+                              <td>223-512-3456</td>
+                          </tr>
+                          <tr>
+                              <td>Emmett</td>
+                              <td>Brown</td>
+                              <td>EmmettBrown@jmr.com.ar</td>
+                              <td>223-512-9988</td>
+                          </tr>
+                          <tr>
+                              <td>Jennifer</td>
+                              <td>Parker</td>
+                              <td>JennParker@jmr.com.ar</td>
+                              <td>223-512-5544</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                </div>
+
+                <div class="subtitulos2" id="kinesiologia">
+                    <h3>Kinesiología</h3>
+                </div>
+                <div class="tablaDr">
+                    <table class="table table-dark table-striped">
+                        <thead>
+                          <tr>
+                              <th scope="col">Nombre</th>
+                              <th scope="col">Apellido</th>
+                              <th scope="col">Contacto</th>
+                              <th scope="col">Teléfono</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                              <td>Marty</td>
+                              <td>McFly</td>
+                              <td>MartyMcFly@jmr.com.ar</td>
+                              <td>223-512-3456</td>
+                          </tr>
+                          <tr>
+                              <td>Emmett</td>
+                              <td>Brown</td>
+                              <td>EmmettBrown@jmr.com.ar</td>
+                              <td>223-512-9988</td>
+                          </tr>
+                          <tr>
+                              <td>Jennifer</td>
+                              <td>Parker</td>
+                              <td>JennParker@jmr.com.ar</td>
+                              <td>223-512-5544</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                </div>
+
+                <div class="subtitulos2" id="odontologia">
+                    <h3>Odontología</h3>
+                </div>
+                <div class="tablaDr">
+                    <table class="table table-dark table-striped">
+                        <thead>
+                          <tr>
+                              <th scope="col">Nombre</th>
+                              <th scope="col">Apellido</th>
+                              <th scope="col">Contacto</th>
+                              <th scope="col">Teléfono</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                              <td>Marty</td>
+                              <td>McFly</td>
+                              <td>MartyMcFly@jmr.com.ar</td>
+                              <td>223-512-3456</td>
+                          </tr>
+                          <tr>
+                              <td>Emmett</td>
+                              <td>Brown</td>
+                              <td>EmmettBrown@jmr.com.ar</td>
+                              <td>223-512-9988</td>
+                          </tr>
+                          <tr>
+                              <td>Jennifer</td>
+                              <td>Parker</td>
+                              <td>JennParker@jmr.com.ar</td>
+                              <td>223-512-5544</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                </div>
+
+                <div class="subtitulos2" id="pediatria">
+                    <h3>Pediatría</h3>
+                </div>
+                <div class="tablaDr">
+                    <table class="table table-dark table-striped">
+                        <thead>
+                          <tr>
+                              <th scope="col">Nombre</th>
+                              <th scope="col">Apellido</th>
+                              <th scope="col">Contacto</th>
+                              <th scope="col">Teléfono</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                              <td>Marty</td>
+                              <td>McFly</td>
+                              <td>MartyMcFly@jmr.com.ar</td>
+                              <td>223-512-3456</td>
+                          </tr>
+                          <tr>
+                              <td>Emmett</td>
+                              <td>Brown</td>
+                              <td>EmmettBrown@jmr.com.ar</td>
+                              <td>223-512-9988</td>
+                          </tr>
+                          <tr>
+                              <td>Jennifer</td>
+                              <td>Parker</td>
+                              <td>JennParker@jmr.com.ar</td>
+                              <td>223-512-5544</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                </div>
+
+                <div class="subtitulos2" id="psicologia">
+                    <h3>Psicología</h3>
+                </div>
+                <div class="tablaDr">
+                    <table class="table table-dark table-striped">
+                        <thead>
+                          <tr>
+                              <th scope="col">Nombre</th>
+                              <th scope="col">Apellido</th>
+                              <th scope="col">Contacto</th>
+                              <th scope="col">Teléfono</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                              <td>Marty</td>
+                              <td>McFly</td>
+                              <td>MartyMcFly@jmr.com.ar</td>
+                              <td>223-512-3456</td>
+                          </tr>
+                          <tr>
+                              <td>Emmett</td>
+                              <td>Brown</td>
+                              <td>EmmettBrown@jmr.com.ar</td>
+                              <td>223-512-9988</td>
+                          </tr>
+                          <tr>
+                              <td>Jennifer</td>
+                              <td>Parker</td>
+                              <td>JennParker@jmr.com.ar</td>
+                              <td>223-512-5544</td>
                           </tr>
                         </tbody>
                       </table>
