--- a/k_horarios.html
+++ b/k_horarios.html
@@ -1,118 +1,210 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../bootstrap-5.1.0-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Biryani:wght@200;300;400;600&family=Dancing+Script:wght@400;500&family=Great+Vibes&family=Montserrat&family=Sacramento&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Montserrat&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="css/estilos.css">
-    <title>Clínica JMR</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
+    <title>Clínica JMR | Horarios</title>
 </head>
 
 <body>
     <header>
-        <div class="cajaNav">
-            <nav class="barraNavegador">
-                <ul class="letrasNav">
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="j_especialidades.html">Especialidades</a></li>
-                    <li><a href="k_horarios.html">Horarios</a></li>
-                    <li><a href="l_institucional.html">Institucional</a></li>
-                    <li><a href="m_contacto.html">Contacto</a></li>
-                </ul>
+        <div class="fijarMenu">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container navegadorBox">
+                    <div class="navegadorLogo">
+                        <a class="navbar-brand" href="./index.html">
+                            <img src="./img/hospital.png" alt="" width="40" height="32">Clínica JMR</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                    <div class="navegadorMenu">
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="./index.html">inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./j_especialidades.html">Especialistas</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./k_horarios.html">Horarios</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./l_institucional.html">Institucional</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./m_contacto.html">Contacto</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </nav>
         </div>
-    </header>
-    <main class="topGenerico">
-        <div class="cajaGenerica pandemia">
-            <h1>Ateción especial en pandemia: 0800-999-1234</h1>
+        <div class="tituloPpal">
+            <div class="tituloAlineado">
+                <h1>Bienvenido a Clínica JMR</h1>
+            </div>
+            <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150"
+                    preserveAspectRatio="none" style="height: 100%; width: 100%;">
+                    <path d="M-4.79,36.02 C148.69,152.45 330.41,152.45 502.54,38.97 L501.41,154.44 L0.00,150.00 Z"
+                        style="stroke: none; fill: white;"></path>
+                </svg></div>
         </div>
+    </header>
+
+    <main>
         <section>
-            <table class="horarios">
-                <thead>
-                    <div>
-                        <h3>Internación: horarios de visita</h3>
-                    </div>
-                    <tr>
-                        <td class="horarios"><strong>Turno/Día</strong></td>
-                        <td class="horarios"><strong>Lunes</strong></td>
-                        <td class="horarios"><strong>Martes</strong></td>
-                        <td class="horarios"><strong>Miercoles</strong></td>
-                        <td class="horarios"><strong>Jueves</strong></td>
-                        <td class="horarios"><strong>Viernes</strong></td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="horarios">Mañana 1° turno</td>
-                        <td class="horarios">08:00 a 09:00hs</td>
-                        <td class="horarios">08:30 a 09:15hs</td>
-                        <td class="horarios">08:00 a 09:00hs</td>
-                        <td class="horarios">08:30 a 09:15hs</td>
-                        <td class="horarios">08:00 a 09:00hs</td>
-                    </tr>
-                    <tr>
-                        <td class="horarios">Mañana 2° turno</td>
-                        <td class="horarios">09:45 a 10:45hs</td>
-                        <td class="horarios">10:00 a 10:45hs</td>
-                        <td class="horarios">09:45 a 10:45hs</td>
-                        <td class="horarios">10:00 a 10:45hs</td>
-                        <td class="horarios">09:45 a 10:45hs</td>
-                    </tr>
-                    <tr>
-                        <td class="horarios">Tarde 1° turno</td>
-                        <td class="horarios">16:00 a 17:00hs</td>
-                        <td class="horarios">16:30 a 17:00hs</td>
-                        <td class="horarios">16:00 a 17:00hs</td>
-                        <td class="horarios">16:30 a 17:00hs</td>
-                        <td class="horarios">16:00 a 17:00hs</td>
-                    </tr>
-                    <tr>
-                        <td class="horarios">Tarde 2° turno</td>
-                        <td class="horarios">17:30 a 18:15hs</td>
-                        <td class="horarios">17:30 a 18:15hs</td>
-                        <td class="horarios">17:30 a 18:15hs</td>
-                        <td class="horarios">17:30 a 18:15hs</td>
-                        <td class="horarios">17:30 a 18:15hs</td>
-                    </tr>
-                </tbody>
+            <div>
                 <div>
-                    <p class="ingreso"><strong>Importante:</strong> recuerde anunciarse en recepción, y acreditar identidad con presentación de su DNI</p>
+                    <h2>Consultorios Externos: Horarios de atención.</h2>
                 </div>
-            </table>
+                <table class="table table-info table-bordered border-primary">
+                    <thead>
+                        <tr>
+                            <th scope="col">Consultorio</th>
+                            <th scope="col">Lunes</th>
+                            <th scope="col">Martes</th>
+                            <th scope="col">Miércoles</th>
+                            <th scope="col">Jueves</th>
+                            <th scope="col">Viernes</th>
+                            <th scope="col">sábado</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">Medico Clínico</th>
+                            <td>10:00 - 18:00</td>
+                            <td>10:00 - 18:00</td>
+                            <td>10:00 - 18:00</td>
+                            <td>10:00 - 18:00</td>
+                            <td>10:00 - 18:00</td>
+                            <td>10:00 - 18:00</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Pediatría</th>
+                            <td>08:00 - 19:00</td>
+                            <td>08:00 - 19:00</td>
+                            <td>08:00 - 19:00</td>
+                            <td>08:00 - 19:00</td>
+                            <td>08:00 - 19:00</td>
+                            <td>08:00 - 19:00</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Otorrino</th>
+                            <td>10:00 - 17:00</td>
+                            <td>10:00 - 17:00</td>
+                            <td>10:00 - 17:00</td>
+                            <td>10:00 - 17:00</td>
+                            <td>10:00 - 17:00</td>
+                            <td>10:00 - 17:00</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Traumatología</th>
+                            <td>09:00 - 16:00</td>
+                            <td>09:00 - 16:00</td>
+                            <td>09:00 - 16:00</td>
+                            <td>09:00 - 16:00</td>
+                            <td>09:00 - 16:00</td>
+                            <td>09:00 - 16:00</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Laboratorio</th>
+                            <td>08:00 - 14:00</td>
+                            <td>08:00 - 14:00</td>
+                            <td>08:00 - 14:00</td>
+                            <td>08:00 - 14:00</td>
+                            <td>08:00 - 14:00</td>
+                            <td>08:00 - 14:00</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <div>
+                    <h2>Maternidad e Internación: Horarios de visita.</h2>
+                </div>
+                <table class="table table-info table-bordered border-primary">
+                    <thead>
+                        <tr>
+                            <th scope="col">Sector a visitar</th>
+                            <th scope="col">Lunes</th>
+                            <th scope="col">Martes</th>
+                            <th scope="col">Miércoles</th>
+                            <th scope="col">Jueves</th>
+                            <th scope="col">Viernes</th>
+                            <th scope="col">sábado</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">Maternidad</th>
+                            <td>10:00 - 12:00 / 16:00 - 17:30</td>
+                            <td>10:00 - 12:00 / 16:00 - 17:30</td>
+                            <td>10:00 - 12:00 / 16:00 - 17:30</td>
+                            <td>10:00 - 12:00 / 16:00 - 17:30</td>
+                            <td>10:00 - 12:00 / 16:00 - 17:30</td>
+                            <td>10:00 - 12:00 / 16:00 - 18:30</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Internación</th>
+                            <td>11:00 - 12:30 / 17:00 - 18:30</td>
+                            <td>11:00 - 12:30 / 17:00 - 18:30</td>
+                            <td>11:00 - 12:30 / 17:00 - 18:30</td>
+                            <td>11:00 - 12:30 / 17:00 - 18:30</td>
+                            <td>11:00 - 12:30 / 17:00 - 18:30</td>
+                            <td>11:00 - 12:30 / 17:00 - 18:30</td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
         </section>
         <section>
             <div>
-                <h3>Consultorios Externos y Especialistas</h3>
+
             </div>
-            <div class="cajaGenerica horarios articulo">
-                <article>
-                    Consultorios Externos: puede comunicarse a nuestro <strong>0800-999-1234 opción 1</strong> para
-                    detalles y horarios
-                </article>
+            <div>
+
             </div>
-            <div class="cajaGenerica horarios articulo">
-                <article>
-                    Especialistas: gestione directamente en el menú, o siga este enlace <a
-                        href="j_especialidades.html">LISTADO ESPECIALISTAS </a>
-                </article>
+            <div>
+
             </div>
         </section>
-        <footer class="piePagina">
-            <div class="cajaPiePagina">
-                <p id="txtFooter">Derechos Reservados a JMR 2021 - Para mas info usa la red social de tu preferencia:
-                </p>
-                <img id="imagenFooter1" src="img/whatsapp.png" alt="icono whatsapp">
-                <img id="imagenFooter2" src="img/instagram.png" alt="icono instagram">
-                <img id="imagenFooter3" src="img/facebook.png" alt="icono facebook">
-                <img id="imagenFooter4" src="img/twitter.png" alt="icono twitter">
+        <footer class="bg-dark">
+            <div class="boxFooter">
+                <div class="boxFooterTxt">
+                    <span>Derechos reservados - Cllínica JMR - 2021</span>
+                </div>
+                <div class="boxFooterImg">
+                    <img class="imgFooter" src="img/facebook.png" alt="">
+                    <img class="imgFooter" src="img/instagram.png" alt="">
+                    <img class="imgFooter" src="img/linkedin.png" alt="">
+                    <img class="imgFooter" src="img/twitter.png" alt="">
+                </div>
             </div>
         </footer>
     </main>
+    <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
 </body>
+
 </html>
