aplicando estilo al carrusel de seccion institucional pestaña

--- a/k_horarios.html
+++ b/k_horarios.html
@@ -71,7 +71,7 @@
 
     <main>
         <section>
-            <div>
+            <div class="tablaDr">
                 <div>
                     <h2>Consultorios Externos: Horarios de atención.</h2>
                 </div>
@@ -139,7 +139,7 @@
         </section>
 
         <section>
-            <div>
+            <div class="tablaDr">
                 <div>
                     <h2>Maternidad e Internación: Horarios de visita.</h2>
                 </div>
