--- a/l_institucional.html
+++ b/l_institucional.html
@@ -1,128 +1,145 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../bootstrap-5.1.0-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Biryani:wght@200;300;400;600&family=Dancing+Script:wght@400;500&family=Great+Vibes&family=Montserrat&family=Sacramento&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Montserrat&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="../bootstrap-5.1.0-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="css/estilos.css">
-    <title>Clínica JMR</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
+    <title>Clínica JMR | Institucional</title>
 </head>
 
 <body>
     <header>
-        <nav class="container row">
-        <ul class="nav justify-content-end col-md-col-12">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./j_especialidades.html">Especialidades</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./k_horarios.html">Horarios</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./l_institucional.html">Institucional</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./m_contacto.html">Contacto</a>
-                </li>
-        </ul>
-    </nav>
-    </header>
-    <main class="topGenerico">
-        <div class="cajaGenerica bordes">
-            <h1>Historia, Misión y Carta del Director</h1>
+        <div class="fijarMenu">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container navegadorBox">
+                    <div class="navegadorLogo">
+                        <a class="navbar-brand" href="./index.html">
+                            <img src="./img/hospital.png" alt="" width="40" height="32">Clínica JMR</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                    <div class="navegadorMenu">
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="./index.html">inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./j_especialidades.html">Especialistas</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./k_horarios.html">Horarios</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./l_institucional.html">Institucional</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./m_contacto.html">Contacto</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
         </div>
-        <section class="horarios bordes">
-            <h2>Nuestra Historia</h2>
-            <p class="textoInstitucional">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga distinctio odit exercitationem porro
-                accusantium alias tenetur, ea saepe consequatur pariatur dolorum earum quidem, veniam doloremque id
-                nesciunt eos, perspiciatis aliquam.
-                Eius laudantium exercitationem dolore, nemo accusantium nisi! Ipsum delectus, cupiditate id blanditiis
-                excepturi nihil nostrum dicta voluptatem porro eveniet ab iure tempora numquam veniam! Molestiae dolorum
-                nihil saepe impedit veniam?
-                Rerum modi architecto perferendis consequatur voluptatum delectus doloremque suscipit distinctio dicta,
-                at tempore fugit explicabo perspiciatis asperiores, neque minus quae velit fuga dolore soluta. Eaque
-                totam aliquid vel officia optio?
-                Quisquam aliquam illo neque nulla libero asperiores sint eum? Ut quam eos sed ad dignissimos quibusdam,
-                distinctio doloremque repellat modi aliquid nobis libero ducimus eveniet vero nisi qui adipisci. Ea.
-                Tempora provident consequatur facere molestiae modi, ab dolore hic, ex rem commodi libero id dignissimos
-                nihil minus aliquam autem quos et veniam nisi magni! Ducimus placeat incidunt excepturi repellendus
-                tempore.
-                Nisi quisquam nesciunt modi aperiam quas ut exercitationem maxime explicabo! Facere eum odit harum. Quae
-                maiores consequuntur, hic necessitatibus fugit nihil labore, quod obcaecati sint ullam voluptatibus
-                corporis et ducimus.
-                Deleniti laudantium ab cumque, dolorem error consequuntur. Ipsam eaque, amet eveniet hic natus est
-                libero tempore, ipsa aliquid quos vel, laboriosam odio exercitationem modi incidunt tenetur! Labore
-                corrupti natus dignissimos.
-            </p>
+        <div class="tituloPpal">
+            <div class="tituloAlineado">
+                <h1>Bienvenido a Clínica JMR</h1>
+            </div>
+            <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150"
+                    preserveAspectRatio="none" style="height: 100%; width: 100%;">
+                    <path d="M-4.79,36.02 C148.69,152.45 330.41,152.45 502.54,38.97 L501.41,154.44 L0.00,150.00 Z"
+                        style="stroke: none; fill: white;"></path>
+                </svg></div>
+        </div>
+    </header>
+
+    <main>
+        <section>
+            <div class="cajaCarrusel">
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active carruselIndividual">
+                            <img src="img/quirofanoRetro.jpg" class="d-block w-100 imgCarrusel" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Primer quirófano - 1968</h5>
+                                <p>Imágen de nuestro primer quirófano, inaugurado por el Dr. Emmett Brown</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item carruselIndividual">
+                            <img src="img/camaAntigua.jpg" class="d-block w-100 imgCarrusel" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Sala de internación</h5>
+                                <p>Fuimos pioneros en la ciudad, contando con 20 camas para internación.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item carruselIndividual">
+                            <img src="img/laboratorioRetro.jpg" class="d-block w-100 imgCarrusel" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Laboratorio de Analisis Clínicos</h5>
+                                <p>Nuestro laboratorio contaba con personal propio y pasantias universitarias.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Anterior</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Siguiente</span>
+                    </button>
+                </div>
+            </div>
         </section>
-        <section class="horarios bordes">
-            <h2>Nuestra Misión</h2>
-            <p class="textoInstitucional">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus laboriosam asperiores officiis ipsa
-                consequuntur fuga quos quis, temporibus dicta accusantium iusto provident? Eligendi quisquam adipisci,
-                atque similique deleniti deserunt laborum?
-                Voluptatibus inventore perferendis ad, modi, eum odio impedit, quidem eius sit hic sint corrupti
-                blanditiis voluptates aliquid? Quas quasi magni, fuga quisquam iusto illo non explicabo similique
-                dolorem recusandae adipisci!
-                Officiis aliquid temporibus debitis aperiam soluta consectetur quos necessitatibus ab unde ad repellat
-                dicta eaque fugiat quisquam facere, commodi, vel tenetur ipsum cumque error dolorem! Sint mollitia
-                facere doloribus rerum!
-                Aut facilis vero dolore mollitia ad voluptate qui deserunt eveniet at voluptatem. Porro eligendi in
-                fugiat quos illum impedit laborum eaque! Eos dolorum cupiditate vero iusto consequuntur nisi eum atque?
-                Similique quos, debitis, totam rerum, harum consequatur doloremque a cumque consequuntur unde quas
-                facere repellat voluptatem dolore incidunt ipsa veritatis doloribus qui odio voluptates? Nobis dicta
-                amet quos repellendus voluptatem?
-                Cupiditate ratione voluptate ut aspernatur, vel nobis ex eveniet ullam quod tempore temporibus saepe
-                illum, explicabo recusandae eaque. Corrupti architecto ad minus quibusdam asperiores suscipit reiciendis
-                soluta harum quaerat eos.
-                Laboriosam illum beatae nemo vitae delectus repudiandae odit minima sequi iste quibusdam hic non eveniet
-                illo deleniti fugiat qui aliquid, possimus, quo repellendus fugit. Neque impedit similique quam commodi
-                ea.
-            </p>
+
+        <section>
+            <div>
+
+            </div>
         </section>
-        <section class="horarios bordes">
-            <h2>Nuestro Director</h2>
-            <p id="cartaDirector">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis consequuntur in ullam vel, officiis
-                cumque facilis nihil rerum totam sint debitis laudantium, repellendus consectetur vitae consequatur
-                eaque aliquam. Iure, labore!
-                Inventore atque error excepturi, eligendi placeat facilis at suscipit earum doloremque autem, fugiat
-                nesciunt in officia alias quasi saepe. Consequatur tempora in error autem, molestias itaque at amet
-                excepturi id.
-                Nemo facilis in et temporibus, necessitatibus suscipit iure repellat, error quod ipsa nobis cumque saepe
-                dicta impedit optio deserunt doloribus explicabo, autem tempora atque maxime sit. Minima corrupti sit
-                exercitationem!
-                In molestias libero minima quidem maxime quos, harum expedita quas neque exercitationem eos quo unde
-                incidunt veniam, officia nam tempora dicta excepturi ad! Suscipit delectus explicabo nihil placeat
-                possimus accusamus.
-                Eum beatae dicta reiciendis nesciunt culpa qui temporibus recusandae vel natus! Velit, enim repudiandae.
-                Fuga aliquid maiores voluptas, libero aut ea excepturi laborum pariatur odit, totam officia provident
-                voluptatum error.
-                Laboriosam eos quia nulla nihil illo harum officiis molestias repellendus, eius fugiat culpa corrupti
-                aliquam dolores excepturi nam quas! Accusamus doloribus temporibus sint aperiam veritatis tenetur
-                expedita, fuga in officiis.
-            </p>
-            <span class="director">Dedicación y Compromiso con su salud.</span>
+
+        <section>
+            <div>
+
+            </div>
         </section>
-        <footer class="piePagina">
-            <div class="cajaPiePagina">
-                <p id="txtFooter">Derechos Reservados a JMR 2021 - Para mas info usa la red social de tu preferencia:
-                </p>
-                <img id="imagenFooter1" src="img/whatsapp.png" alt="icono whatsapp">
-                <img id="imagenFooter2" src="img/instagram.png" alt="icono instagram">
-                <img id="imagenFooter3" src="img/facebook.png" alt="icono facebook">
-                <img id="imagenFooter4" src="img/twitter.png" alt="icono twitter">
+        <footer class="bg-dark">
+            <div class="boxFooter">
+                <div class="boxFooterTxt">
+                    <span>Derechos reservados - Cllínica JMR - 2021</span>
+                </div>
+                <div class="boxFooterImg">
+                    <img class="imgFooter" src="img/facebook.png" alt="">
+                    <img class="imgFooter" src="img/instagram.png" alt="">
+                    <img class="imgFooter" src="img/linkedin.png" alt="">
+                    <img class="imgFooter" src="img/twitter.png" alt="">
+                </div>
             </div>
         </footer>
     </main>
