agregando pagina de contacto, sin estilos stitucional pestaña

--- a/l_institucional.html
+++ b/l_institucional.html
@@ -71,7 +71,11 @@
 
     <main>
         <section>
+            
             <div class="cajaCarrusel">
+                <div>
+                    <h2>Clínica JMR: imágenes históricas</h2>
+                </div>
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
@@ -145,5 +149,4 @@
     </main>
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
 </body>
-
 </html>
