limpiando codigo en final de todas las paginas

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h2>Busquedas frecuentes</h2>
             </div>
             <div class="cajaX3">
-                <div class="card bordes" style="width: 18rem;">
+                <div class="card bordes">
                     <img src="img/turnos.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Turnos</h5>
@@ -84,7 +84,7 @@
                         <a href="#" class="btn btn-dark">Su Turno Aquí</a>
                     </div>
                 </div>
-                <div class="card bordes" style="width: 18rem;">
+                <div class="card bordes">
                     <img src="img/estetoscopio.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Especialistas</h5>
@@ -93,7 +93,7 @@
                         <a href="#" class="btn btn-dark">Cuerpo Médico</a>
                     </div>
                 </div>
-                <div class="card bordes" style="width: 18rem;">
+                <div class="card bordes">
                     <img src="img/agenda.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Horarios</h5>
