--- a/l_institucional.html
+++ b/l_institucional.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Historia y comienzos de la clinica, internacion y maternidad en los comienzos">
+    <meta name="keywords"  content="clinica, medicos, maternidad, sala internacion">
     <link rel="stylesheet" href="../bootstrap-5.1.0-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
