--- a/j_especialidades.html
+++ b/j_especialidades.html
@@ -97,7 +97,7 @@
                     <h3>Clínica Médica</h3>
                 </div>
                 <div class="tablaDr">
-                    <table class="table table-dark table-striped">
+                    <table class="table table-dark table-striped table-hover">
                         <thead>
                           <tr>
                               <th scope="col">Nombre</th>
@@ -384,17 +384,6 @@
 
         </section>
 
-        <section>
-            <div>
-
-            </div>
-        </section>
-
-        <section>
-            <div>
-
-            </div>
-        </section>
         <footer class="bg-dark">
             <div class="boxFooter">
                 <div class="boxFooterTxt">
@@ -411,6 +400,9 @@
     </main>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
+</body>
+</html>jaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
 </body>
 </html>
