Acomodar nuevamente luego de revision conjunta con profe Leo Lovera

--- a/l_institucional.html
+++ b/l_institucional.html
@@ -5,14 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Historia y comienzos de la clinica, internacion y maternidad en los comienzos">
-    <meta name="keywords"  content="clinica, medicos, maternidad, sala internacion">
+    <meta name="description" content="clinica de atencion medica, los comienzos, nuestra historia y primeros pasos">
+    <meta name="keywords"  content="clinica, analisis, consultorio, historia, comienzos">
     <link rel="stylesheet" href="../bootstrap-5.1.0-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Biryani:wght@200;300;400;600&family=Dancing+Script:wght@400;500&family=Great+Vibes&family=Montserrat&family=Sacramento&display=swap"
-        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Montserrat&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
