--- a/m_contacto.html
+++ b/m_contacto.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="clinica medica, turnos y contacto para atencion primaria de salud">
-    <meta name="keywords"  content="pediatra, pediatria, medico, clinico, analisis, consultorio, doctor, cardiologo, cardiologia">
+    <meta name="description" content="clinica de atencion medica, contacto a traves de redes y formularios">
+    <meta name="keywords"  content="pediatra, medico, clinico, analisis, consultorio, doctor, mail, contacto, telefono">
     <link rel="stylesheet" href="../bootstrap-5.1.0-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -134,4 +134,6 @@
     </main>
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
 </body>
+</html>ody>
+</html>>
 </html>
