--- a/k_horarios.html
+++ b/k_horarios.html
@@ -5,14 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="clinica de atencion medica, horarios de atención y visitas">
-    <meta name="keywords"  content="consultorios externos, maternidad, internacion, atencion sin turnos">
+    <meta name="description" content="clinica de atencion medica, horarios de atencion medica">
+    <meta name="keywords"  content="pediatria, consultorio externo, internacion, maternidad">
     <link rel="stylesheet" href="../bootstrap-5.1.0-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Biryani:wght@200;300;400;600&family=Dancing+Script:wght@400;500&family=Great+Vibes&family=Montserrat&family=Sacramento&display=swap"
-        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Montserrat&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
