sigo limpiando errores que no se de donde salen

--- a/index.html
+++ b/index.html
@@ -241,8 +241,7 @@
     </main>
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
 </body>
-
-</html>>
+</html>l>>
 
 </html>></script>
 </body>
@@ -252,5 +251,4 @@
 
 </html>otstrap.js"></script>
 </body>
-
-</html>
+</html>l>
