--- a/j_especialidades.html
+++ b/j_especialidades.html
@@ -93,7 +93,7 @@
                     <h3>Clínica Médica</h3>
                 </div>
                 <div class="tablaDr">
-                    <table class="table table-dark table-striped table-hover">
+                    <table class="table table-dark table-striped">
                         <thead>
                           <tr>
                               <th scope="col">Nombre</th>
@@ -377,7 +377,6 @@
                       </table>
                 </div>
             </div>
-
         </section>
 
         <footer class="bg-dark">
@@ -394,11 +393,14 @@
             </div>
         </footer>
     </main>
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
 </body>
-</html>jaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+</html>/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
 </body>
+</html>dy>
+</html>l>EBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
+</body>
+</html>dy>
 </html>
