Limpiando código de posibles errores generados por VSCode

--- a/index.html
+++ b/index.html
@@ -241,14 +241,5 @@
     </main>
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
 </body>
-</html>l>>
-
-</html>></script>
-</body>
-
-</html>></script>
-</body>
-
-</html>otstrap.js"></script>
-</body>
-</html>l>
+</html>
+<!--  -->
