--- a/l_institucional.html
+++ b/l_institucional.html
@@ -120,18 +120,7 @@
                 </div>
             </div>
         </section>
-
-        <section>
-            <div>
-
-            </div>
-        </section>
-
-        <section>
-            <div>
-
-            </div>
-        </section>
+        
         <footer class="bg-dark">
             <div class="boxFooter">
                 <div class="boxFooterTxt">
@@ -149,3 +138,11 @@
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
 </body>
 </html>
+<!--  -->div>
+            </div>
+        </footer>
+    </main>
+    <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
+</body>
+</html>
+<!--  -->
